tools/tests/errors/surf_parse_20.ki
# PARSER: 'return' used at top level inside an if (not inside any function)
if 1 < 2:
    return 7